--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1 a {
 }
 
 
-h1 span.wrap {
+h1 a.typewrite {
 	overflow: hidden; /* Ensures the content is not revealed until the animation */
 	border-right: 3px solid blue; /* The typwriter cursor */
 	white-space: nowrap; /* Keeps the content on a single line */
