--- a/style.css
+++ b/style.css
@@ -35,9 +35,9 @@ h1 a {
 }
 
 
-h1 a.typewrite {
+h1 span.wrap {
 	overflow: hidden; /* Ensures the content is not revealed until the animation */
-	border-right: 3px solid blue; /* The typwriter cursor */
+	border-right: 0.08em solid blue; /* The typwriter cursor */
 	white-space: nowrap; /* Keeps the content on a single line */
 	margin: 0 auto; /* Gives that scrolling effect as the typing happens */
 	animation: 
