--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ div#projects div {
 body {
 	font-family: futura-pt, sans-serif;
 	margin: 24 auto;
+	background-color: #fafafa;
 }
 
 a.navbar-brand {
@@ -58,27 +59,45 @@ h1 span.wrap {
   }
 
 div.recommendations {
-	box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.10);
-	border-radius: 8px;
+	box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1);
+	border-radius: 12px;
 	padding: 32px;
-	transition: all 200ms;
+	transition: all 500ms;
 	text-align: center;
 	background-color: white;
+	height: auto;
   }
 
 div.recommendations:hover {
-	  transform: scale(1.02);
-	  transition: all 200ms;
-	  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.20);
+	  transform: scale(1.05);
+	  transition: all 600ms;
+	  box-shadow: 0px 16px 32px 0px rgba(0,0,0,0.1);
   }
 
+div.recommendations img {
+	width: 64px;
+	margin-bottom: 16px;
+}
+
+div.recommendations h3 {
+	margin: 0px;
+}
+
+div.recommendations h6 {
+	color: #aaa;
+	margin-bottom: 16px;
+}
+
 div.recommendations p {
-	  font-size: 13pt;
+	  font-size: 12pt;
+	  color: #777;
+	  font-family: Arial, Helvetica, sans-serif;
+	  font-weight: 400;
+	  line-height: 150%;
   }
 
 div.section {
 	  background-color: #fafafa;
-	  padding: 64px;
 	  }
 
 a.typewrite:hover {
